Replace image source in index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div id="container">
     <div class="midclass">
       <div class="innerclass">
-        <div class="imageclass" style="display: block;"><img src="image-avatar.jpg" width="299px" height="100px" alt=""  ></div><br>
-        <div class="paragraph" style="display: block;"><span style="padding: 4px;padding-right: 8px;padding-left: 8px;border-radius: 6px; background-color:hsl(47, 88%, 63%);">Learning</span><p style="margin: 6px;margin-left: 0px;">Published 21 Dec 2023</p><span style="font-weight: bolder; font-size: x-large;padding: 0px;margin: 0px;">HTML & CSS foundations</span><p style="padding: 0px;margin: 0px; width: 300px; color: rgb(109, 107, 107);">These languages are the backbone of every website, defining structure, content, and presentation.</p ><p style="padding: 0px; margin: 0px;"><img src="assets/images/image-avatar.webp" height="40px" width="40" alt=""><span style="position: relative;bottom: 10px;left: 10px;font-size: large;">Greg Hooper</span></p></div>
+        <div class="imageclass" style="display: block;"><img src="illustration-article.jpg" width="299px" height="100px" alt=""  ></div><br>
+        <div class="paragraph" style="display: block;"><span style="padding: 4px;padding-right: 8px;padding-left: 8px;border-radius: 6px; background-color:hsl(47, 88%, 63%);">Learning</span><p style="margin: 6px;margin-left: 0px;">Published 21 Dec 2023</p><span style="font-weight: bolder; font-size: x-large;padding: 0px;margin: 0px;">HTML & CSS foundations</span><p style="padding: 0px;margin: 0px; width: 300px; color: rgb(109, 107, 107);">These languages are the backbone of every website, defining structure, content, and presentation.</p ><p style="padding: 0px; margin: 0px;"><img src="image-avatar.webp" height="40px" width="40" alt=""><span style="position: relative;bottom: 10px;left: 10px;font-size: large;">Greg Hooper</span></p></div>
       </div>
     </div>
     </div>
